[gd_scene load_steps=14 format=2]

[ext_resource path="res://source/mini_games/candy_store/assets/background.png" type="Texture" id=1]
[ext_resource path="res://source/mini_games/candy_store/assets/blue_bag_1.png" type="Texture" id=2]
[ext_resource path="res://source/mini_games/candy_store/assets/yellow_bag_1.png" type="Texture" id=3]
[ext_resource path="res://source/mini_games/candy_store/DraggableCandy.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/mini_games/candy_store/assets/green_bag.png" type="Texture" id=5]
[ext_resource path="res://source/mini_games/candy_store/assets/purple_bag_1.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/bahnschrift.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://source/mini_games/candy_store/DragTargetBag.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/mini_games/candy_store/CandyContainer.gd" type="Script" id=9]
[ext_resource path="res://source/mini_games/candy_store/Main.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/dialogue_end.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 38
use_mipmaps = true
use_filter = true
extra_spacing_top = 10
extra_spacing_bottom = 10
extra_spacing_char = 2
extra_spacing_space = 10
font_data = ExtResource( 7 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2002.0
margin_bottom = 814.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="HSeparator" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 718.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/HSeparator"]
margin_right = 924.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Instructions: Place the Colored candies in the respective colored bags"
autowrap = true

[node name="TimeLabel" type="Label" parent="MarginContainer/HSeparator"]
margin_top = 49.0
margin_right = 924.0
margin_bottom = 108.0
custom_colors/font_color_shadow = Color( 0, 0.160784, 0.372549, 1 )
custom_fonts/font = SubResource( 2 )
text = "2:00"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSeparator"]
margin_top = 128.0
margin_right = 924.0
margin_bottom = 668.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSeparator/HBoxContainer"]
margin_right = 460.0
margin_bottom = 540.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Panel2" type="ColorRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 530.0
color = Color( 0.207843, 0.207843, 0.207843, 0.4 )

[node name="CandyContainer" type="CenterContainer" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 530.0
script = ExtResource( 9 )

[node name="DraggableCandy" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer/CandyContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 210.0
margin_right = 270.0
margin_bottom = 310.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer/CandyContainer"]
stream = ExtResource( 11 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HSeparator/HBoxContainer"]
margin_left = 464.0
margin_right = 924.0
margin_bottom = 540.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Panel" type="ColorRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 530.0
color = Color( 0.207843, 0.207843, 0.207843, 0.4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 530.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 218.0
margin_bottom = 520.0
size_flags_horizontal = 3

[node name="Blue" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 218.0
margin_bottom = 258.0
bag_color = "blue"

[node name="TextureRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Blue" index="0"]
texture = ExtResource( 2 )

[node name="Purple" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 262.0
margin_right = 218.0
margin_bottom = 520.0
bag_color = "purple"

[node name="TextureRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Purple" index="0"]
texture = ExtResource( 6 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 222.0
margin_right = 440.0
margin_bottom = 520.0
size_flags_horizontal = 3

[node name="Green" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 218.0
margin_bottom = 258.0
bag_color = "green"

[node name="TextureRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Green" index="0"]
texture = ExtResource( 5 )

[node name="Yellow" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 262.0
margin_right = 218.0
margin_bottom = 520.0
bag_color = "yellow"

[node name="TextureRect" parent="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Yellow" index="0"]
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="candy_dropped" from="MarginContainer/HSeparator/HBoxContainer/MarginContainer/CandyContainer" to="." method="_on_CandyContainer_candy_dropped"]
[connection signal="candy_dropped" from="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Blue" to="." method="_on_Blue_candy_dropped"]
[connection signal="candy_dropped" from="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Purple" to="." method="_on_Purple_candy_dropped"]
[connection signal="candy_dropped" from="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Green" to="." method="_on_Green_candy_dropped"]
[connection signal="candy_dropped" from="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Yellow" to="." method="_on_Yellow_candy_dropped"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Blue"]
[editable path="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/Purple"]
[editable path="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Green"]
[editable path="MarginContainer/HSeparator/HBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2/Yellow"]
